# UIUC_BOT

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: analytics.py  chat.py  checklist.py  dependencies.py  documents.py  feedback.py  health.py  retrieve.py  sessions.py  sources.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  rate_limit.py  safety.py
backend/app/database/: session.py
backend/app/embeddings/: embedder.py
backend/app/evaluation/: cited_context.py  faithfulness.py  faithfulness_runner.py  golden_set.py  llm_judge.py  retrieval_metrics.py  retrieval_runner.py  runner.py
backend/app/graph/: checkpointer.py  dependencies.py  edges.py  generation.py  graph.py  nodes.py  state.py
backend/app/ingestion/: canonical.py  chunking.py  cleaning.py  crawl_seed.py  crawl_seeds.py  crawler.py  extracted_document.py  fetch.py  html_loader.py  pdf_loader.py  robots.py  semantic_chunker.py  source_config.py  sources.py  timestamps.py
backend/app/llm/: base.py  google_client.py  groq_answer_generator.py  groq_client.py  openai_client.py  openrouter_client.py  prompt_builder.py  provider_factory.py
backend/app/models/: chat_turn_event.py  conversation_session.py  document.py  feedback.py  schemas.py
backend/app/prompts/: rag_system_prompt.txt
backend/app/rag/: _telemetry.py  embeddings.py  generator.py  prompt_builder.py  retriever.py  vector_store.py
backend/app/repositories/: chat_turn_event_repository.py  (+4 more)
backend/migrations/: env.py
backend/scripts/: backfill_document_metadata.py  backfill_semantic_chunks.py  discover_sources.py  eval_answers.py  eval_rag.py  load_test.py  run_crawl.py  run_indexing.py  run_ingestion.py
backend/tests/: conftest.py  test_analytics_api.py  test_chat_api.py  test_chat_turn_event_repository.py  test_documents_api.py  test_feedback_api.py  test_graph.py  test_health.py  test_hybrid_retriever.py  test_indexing_service.py  test_ingestion_service.py  test_retrieve_api.py  test_sessions.py
(+150 files in other folders)
