[project]
name = "illiniguide-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "lxml>=6.1.1",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "torch>=2.13.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.uv.sources]
# CPU-only torch: sentence-transformers pulls torch transitively, and the
# default PyPI wheel bundles CUDA, ballooning the image by several GB for
# a backend that only ever runs embeddings on CPU.
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
